correcting first noob bugs

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
+<html ng-app='NotePairApp'>
 <head>
     <title> Moodok </title>
     <link rel="stylesheet" type="text/css" href="app/bower_components/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" href="resources/css/main.css"/>
 
     <!--------------------------------- SCRIPTS ---------------------------------------------->
-
-    <script src="app/bower_components/angular/angular.min.js"></script>
-    <script src="app/app.js"></script>
+    <script src="app/bower_components/jquery/dist/jquery.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.js"></script>
     <script src="app/services/api.js"></script>
+    <script src="app/app.js"></script>
+
 
 </head>
 <body ng-controller="MainController">
@@ -18,5 +20,8 @@
 
 <h3 align="center"> WOW ! HOW AMAZING !</h3>
 
+{{2+3}}
+
 <p>Well, I got some trouble with angular -  ... WTF ? </p>
 </body>
+</html>
