npm start maggle

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
     <script src="app/services/api.js"></script>
     <script src="app/app.js"></script>
 
+    <script src="app/navbar/navbar.directive.js"></script>
 
 </head>
-<body ng-controller="MainController">
+<body>
+
+<navbar></navbar>
 <h1>Welcome to NotePairs_app, an app which would be better to get renamed.</h1>
 <p> In this app, you will use our API to create evaluations if you're a teacher, and, if you're on the contrary, a student, you'll return them. </p>
 
