--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" type="text/css" href="app/bower_components/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" href="resources/css/main.css"/>
     <link href="https://fonts.googleapis.com/css?family=Asap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="favicon.png" />
 
     <!--------------------------------- SCRIPTS ---------------------------------------------->
     <script src="app/bower_components/jquery/dist/jquery.js"></script>
