--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
 
 <p> What's the biggest change ? You will correct your colleagues' handouts. </p>
 
+
+
+<a href="app/course/course.html">course.html</a><br>
+<a href="app/courses/courses.html">courses.html</a>
+
+
+
 <h3 align="center"> WOW ! HOW AMAZING !</h3>
 
 {{2+3}}
