--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
 
 <h3 align="center"> WOW ! HOW AMAZING !</h3>
-
-{{2+3}}
-
-<p>Well, I got some trouble with angular -  ... WTF ? </p>
+<footer>
+    <hr>
+    Ceci n'est pas un footer
+</footer>
 </body>
 </html>
