--- a/app/navbar/navbar.html
+++ b/app/navbar/navbar.html
@@ -18,9 +18,14 @@
                     <li class="active"><a href="#">Accueil <span class="sr-only">(current)</span></a></li>
                     <li><a href="#">Mes cours</a></li>
                     <li><a href="#">Mes statistiques</a></li>
-                    <li> <a href="#"><span class="glyphicon glyphicon-plus"></span> Créer</a></li>
+                    <li class="dropdown"> <a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-plus"></span>Créer</a></li>
+                    <ul class="dropdown-menu">
+                        <li><a href="#"> New Evaluation </a></li>
+                    </ul>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
     </nav>
 </div>
+
+<!--ajouter admin onglets !! -->
