--- a/app/Admin/pages/admin.html
+++ b/app/Admin/pages/admin.html
@@ -1,41 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>SB Admin 2 - Bootstrap Admin Theme</title>
-
-    <!-- Bootstrap Core CSS -->
-    <link href="/app/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- MetisMenu CSS -->
-    <link href="/app/bower_components/metisMenu/dist/metisMenu.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
-    <link href="/app/Admin/dist/css/sb-admin-2.css" rel="stylesheet">
-
-    <!-- Morris Charts CSS -->
-
-    <!-- Custom Fonts -->
-    <link href="/app/bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-</head>
-
-<body>
-
     <div id="wrapper">
 
         <!-- Navigation -->
@@ -47,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">SB Admin v2.0</a>
+                <a class="navbar-brand" href="admin.html">SB Admin v2.0</a>
             </div>
             <!-- /.navbar-header -->
 
@@ -276,7 +238,7 @@
                             <!-- /input-group -->
                         </li>
                         <li>
-                            <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+                            <a href="admin.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                         </li>
                         <li>
                             <a href="tables.html"><i class="fa fa-table fa-fw"></i> Cours</a>
@@ -300,128 +262,12 @@
             <!-- /.navbar-static-side -->
         </nav>
 
-        <div id="page-wrapper">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1 class="page-header">Dashboard</h1>
-                </div>
-                <!-- /.col-lg-12 -->
-            </div>
-            <!-- /.row -->
-            <div class="row">
 
 
+        <div ui-view="content"></div>
 
 
-
-            <!-- modified -->
-            <div class="col-lg-6">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            Gestion des cours
-                        </div>
-                        <!-- /.panel-heading -->
-                        <div class="panel-body">
-                            <div>
-                                <a href="#">Ajouter un cours</a><br>
-                                <a href="#">Voir la liste des cours</a><br>
-                                <a href="#">Statistiques</a><br>
-                            </div>
-                        </div>
-                        <!-- /.panel-body -->
-                    </div>
-                    <!-- /.panel -->
-                </div>
-                <!-- /.col-lg-6 -->
-                <div class="col-lg-6">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            Gestion des étudiants
-                        </div>
-                        <!-- /.panel-heading -->
-                        <div class="panel-body">
-                            <div>
-                                <a href="#">Ajouter un étudiant</a><br>
-                                <a href="#">Voir la liste des étudiants</a><br>
-                                <a href="#">Statistiques</a><br>
-                            </div>                        
-                        </div>
-                        <!-- /.panel-body -->
-                    </div>
-                    <!-- /.panel -->
-                </div>
-                <!-- /.col-lg-6 -->
-                <div class="col-lg-6">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            Gestion des enseignants
-                        </div>
-                        <!-- /.panel-heading -->
-                        <div class="panel-body">
-                            <div>
-                                <a href="#">Ajouter un enseignant</a><br>
-                                <a href="#">Voir la liste des enseignants</a><br>
-                                <a href="#">Statistiques</a><br>
-                            </div>
-                        </div>
-                        <!-- /.panel-body -->
-                    </div>
-                    <!-- /.panel -->
-                </div>
-                <!-- /.col-lg-6 -->
-                <div class="col-lg-6">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            Gestion des groupes
-                        </div>
-                        <!-- /.panel-heading -->
-                        <div class="panel-body">
-                            <div>
-                                <a href="#">Ajouter un groupe</a><br>
-                                <a href="#">Voir la liste des groupes</a><br>
-                                <a href="#">Statistiques</a><br>
-                            </div>
-                        </div>
-                        <!-- /.panel-body -->
-                    </div>
-                    <!-- /.panel -->
-                </div>
-                <!-- /.col-lg-6 -->
-
-
-                <!-- /modified -->
-
-
-
-
-
-                
-            </div>
-            <!-- /.row -->
-            
-        </div>
-        <!-- /#page-wrapper -->
 
     </div>
     <!-- /#wrapper -->
 
-    <!-- jQuery -->
-    <script src="/app/bower_components/jquery/dist/jquery.min.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="/app/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-
-    <!-- Metis Menu Plugin JavaScript -->
-    <script src="/app/bower_components/metisMenu/dist/metisMenu.min.js"></script>
-
-    <!-- Morris Charts JavaScript -->
-    <script src="../vendor/raphael/raphael.min.js"></script>
-    <script src="../vendor/morrisjs/morris.min.js"></script>
-    <script src="../data/morris-data.js"></script>
-
-    <!-- Custom Theme JavaScript -->
-    <script src="/app/Admin/dist/js/sb-admin-2.js"></script>
-
-</body>
-
-</html>
