--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="app/bower_components/jquery/dist/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.js"></script>
     <script src="app/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="app/bower_components/bootstrap/dist/js/bootstrap.js"></script>
 
     <!-- Metis Menu Plugin JavaScript -->
     <script src="/app/bower_components/metisMenu/dist/metisMenu.min.js"></script>
