--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
     <script src="app/app_state.js"></script>
     <script src="app/Admin/pages/admin_state.js"></script>
     <script src="app/navbar/navbar.directive.js"></script>
+    <script src="app/services/eleves_service.js"></script>
+    <script src="app/services/enseignants_service.js"></script>
+
+    <!--------------------------------- CONTROLLERS--------------------------------------------->
+    <script src="app/Admin/pages/eleves/eleves_controller.js"></script>
+    <script src="app/Admin/pages/enseignants/enseignants_controller.js"></script>
+
 
 </head>
 <body>
