création routes eleve enseignant cours

--- a/app/Admin/pages/admin.html
+++ b/app/Admin/pages/admin.html
@@ -244,10 +244,10 @@
                             <a href="tables.html"><i class="fa fa-table fa-fw"></i> Cours</a>
                         </li>
                         <li>
-                            <a href="tables.html"><i class="fa fa-table fa-fw"></i> Étudiants</a>
+                            <a ui-sref="admin.students"><i class="fa fa-table fa-fw"></i> Étudiants</a>
                         </li>
                         <li>
-                            <a href="forms.html"><i class="fa fa-table fa-fw"></i> Enseignants</a>
+                            <a ui-sref="admin.enseignants"><i class="fa fa-table fa-fw"></i> Enseignants</a>
                         </li>
                         <li>
                             <a href="forms.html"><i class="fa fa-table fa-fw"></i> Groupes</a>
