création routes eleve enseignant cours

--- a/app/Admin/pages/main/main.html
+++ b/app/Admin/pages/main/main.html
@@ -23,7 +23,7 @@
                     <div class="panel-body">
                         <div>
                             <a href="#">Ajouter un cours</a><br>
-                            <a href="#">Voir la liste des cours</a><br>
+                            <a ui-sref="admin.cours">Voir la liste des cours</a><br>
                             <a href="#">Statistiques</a><br>
                         </div>
                     </div>
@@ -40,7 +40,7 @@
                     <!-- /.panel-heading -->
                     <div class="panel-body">
                         <div>
-                            <a href="#">Ajouter un étudiant</a><br>
+                            <a ui-sref="admin.students">Ajouter un étudiant</a><br>
                             <a href="#">Voir la liste des étudiants</a><br>
                             <a href="#">Statistiques</a><br>
                         </div>
@@ -58,7 +58,7 @@
                     <!-- /.panel-heading -->
                     <div class="panel-body">
                         <div>
-                            <a href="#">Ajouter un enseignant</a><br>
+                            <a ui-sref="admin.enseignants">Ajouter un enseignant</a><br>
                             <a href="#">Voir la liste des enseignants</a><br>
                             <a href="#">Statistiques</a><br>
                         </div>
