--- a/app/Admin/pages/admin.html
+++ b/app/Admin/pages/admin.html
@@ -238,7 +238,7 @@
                             <!-- /input-group -->
                         </li>
                         <li>
-                            <a href="admin.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+                            <a ui-sref="admin"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                         </li>
                         <li>
                             <a href="tables.html"><i class="fa fa-table fa-fw"></i> Cours</a>
