--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <!--------------------------------- SCRIPTS ---------------------------------------------->
     <script src="app/bower_components/jquery/dist/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.js"></script>
+    <script src="app/bower_components/angular-resource/angular-resource.js"></script>
     <script src="app/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="app/bower_components/bootstrap/dist/js/bootstrap.js"></script>
 
@@ -41,6 +42,7 @@
     <!--------------------------------- CONTROLLERS--------------------------------------------->
     <script src="app/Admin/pages/eleves/eleves_controller.js"></script>
     <script src="app/Admin/pages/enseignants/enseignants_controller.js"></script>
+    <script src="app/bower_components/angular-resource/angular-resource.js"></script>
 
 
 </head>
