--- a/app/Admin/pages/eleves/eleves.html
+++ b/app/Admin/pages/eleves/eleves.html
@@ -10,7 +10,7 @@
         <div class="col-lg-12">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    Etudiants
+                    Étudiants
                 </div>
                 <!-- /.panel-heading -->
                 <div class="panel-body">
@@ -36,10 +36,18 @@
                             <td class="hidden-md hidden-sm hidden-xs">{{eleve.eleves_id}}</td>
                             <td class="hidden-md hidden-sm hidden-xs">{{eleve.user_id}}</td>
                             <td class="hidden-sm hidden-xs">{{eleve.Groupes}}</td>
-                            <td class="hidden-sm hidden-xs">{{eleve.cours}}</td>
+                            <td class="hidden-sm hidden-xs">
+                                <div class="dropdown">
+                                    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                        Liste des cours
+                                        <span class="caret"></span>
+                                    </button>
+                                    <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
+                                        <li ng-repeat="c in eleve.cours"><a href="#">{{c}}</a></li>
+                                    </ul>
+                                </div>
+                            </td>
                             <td>
-                                <button type="button" class="btn btn-success btn-circle-micro"><i class="fa fa-plus"></i>
-                                </button>
                                 <button type="button" class="btn btn-primary btn-circle-micro"><i class="fa fa-list"></i>
                                 </button>
                                 <button type="button" class="btn btn-danger btn-circle-micro"><i class="fa fa-times"></i>
@@ -52,7 +60,7 @@
                         </tbody>
                     </table>
                     <!-- /.table-responsive -->
-
+                    <button class="btn btn-primary pull-right" href="#">Ajouter un étudiant</button>
                 </div>
                 <!-- /.panel-body -->
             </div>
