--- a/app/Admin/pages/eleves/eleves.html
+++ b/app/Admin/pages/eleves/eleves.html
@@ -35,7 +35,17 @@
                             <td class="hidden-xs">{{eleve.email}}</td>
                             <td class="hidden-md hidden-sm hidden-xs">{{eleve.eleves_id}}</td>
                             <td class="hidden-md hidden-sm hidden-xs">{{eleve.user_id}}</td>
-                            <td class="hidden-sm hidden-xs">{{eleve.Groupes}}</td>
+                            <td class="hidden-sm hidden-xs">
+                                <div class="dropdown">
+                                    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                        Liste des groupes
+                                        <span class="caret"></span>
+                                    </button>
+                                    <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
+                                        <li ng-repeat="g in eleve.Groupes"><a href="#">{{g}}</a></li>
+                                    </ul>
+                                </div>
+                            </td>
                             <td class="hidden-sm hidden-xs">
                                 <div class="dropdown">
                                     <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
