Routes et formulaire students

--- a/app/Admin/pages/eleves/eleves.html
+++ b/app/Admin/pages/eleves/eleves.html
@@ -60,7 +60,7 @@
                         </tbody>
                     </table>
                     <!-- /.table-responsive -->
-                    <button class="btn btn-primary pull-right" href="#">Ajouter un étudiant</button>
+                    <button class="btn btn-primary pull-right" ng-click="add()">Ajouter un étudiant</button>
                 </div>
                 <!-- /.panel-body -->
             </div>
