--- a/app/Admin/pages/main/main.html
+++ b/app/Admin/pages/main/main.html
@@ -40,8 +40,8 @@
                     <!-- /.panel-heading -->
                     <div class="panel-body">
                         <div>
-                            <a ui-sref="admin.students">Ajouter un étudiant</a><br>
-                            <a href="#">Voir la liste des étudiants</a><br>
+                            <a ui-sref="admin.students.add">Ajouter un étudiant</a><br>
+                            <a ui-sref="admin.students">Voir la liste des étudiants</a><br>
                             <a href="#">Statistiques</a><br>
                         </div>
                     </div>
@@ -58,8 +58,8 @@
                     <!-- /.panel-heading -->
                     <div class="panel-body">
                         <div>
-                            <a ui-sref="admin.enseignants">Ajouter un enseignant</a><br>
-                            <a href="#">Voir la liste des enseignants</a><br>
+                            <a href="#">Ajouter un enseignant</a><br>
+                            <a ui-sref="admin.enseignants">Voir la liste des enseignants</a><br>
                             <a href="#">Statistiques</a><br>
                         </div>
                     </div>
