--- a/app/Admin/pages/eleves/eleves_add.html
+++ b/app/Admin/pages/eleves/eleves_add.html
@@ -1,3 +1,13 @@
+<div id="page-wrapper">
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">New Student</h1>
+        </div>
+        <!-- /.col-lg-12 -->
+    </div>
+    <!-- /.row -->
+    <div class="row">
+        <div class="col-lg-12">
 <div class="form-group">
     <label for="nom" class="col-sm-2 control-label">Nom</label>
     <div class="col-sm-10">
@@ -35,3 +45,6 @@
         <input type="submit" class="btn btn-primary" value="Save"/>
     </div>
 </div>
+            </div>
+        </div>
+    </div>
