--- a/app/Admin/pages/eleves/eleves_form.html
+++ b/app/Admin/pages/eleves/eleves_form.html
@@ -17,6 +17,7 @@
         <input type="text" ng-model="Eleve.email" class="form-control" id="email" placeholder="email"/>
     </div>
 </div>
+
 <div class="form-group">
     <label for="username" class="col-sm-2 control-label">Username</label>
     <div class="col-sm-10">
@@ -32,6 +33,6 @@
 
 <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-        <input type="submit" class="btn btn-primary" value="Save"/>
+        <input type="submit" class="btn btn-primary" value="Ajouter Elève"/>
     </div>
 </div>
