--- a/app/Admin/pages/eleves/eleves_add.html
+++ b/app/Admin/pages/eleves/eleves_add.html
@@ -1,7 +1,7 @@
 <div id="page-wrapper">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">New Student</h1>
+            <h1 class="page-header">Nouvel Etudiant</h1>
         </div>
         <!-- /.col-lg-12 -->
     </div>
