--- a/app/Admin/pages/eleves/eleves_add.html
+++ b/app/Admin/pages/eleves/eleves_add.html
@@ -3,49 +3,49 @@
         <div class="col-lg-12">
             <h1 class="page-header">Nouvel Etudiant</h1>
         </div>
-        <!-- /.col-lg-12 -->
+                    <!-- /.col-lg-12 -->
     </div>
-    <!-- /.row -->
+                <!-- /.row -->
     <div class="row">
         <div class="col-lg-12">
-<div class="form-group">
-    <label for="nom" class="col-sm-2 control-label">Nom</label>
-    <div class="col-sm-10">
-        <input type="text" ng-model="Eleve.Nom" class="form-control" id="nom" placeholder="Nom"/>
-    </div>
-</div>
-<div class="form-group">
-    <label for="prenom" class="col-sm-2 control-label">Prenom</label>
-    <div class="col-sm-10">
-        <input type="text" ng-model="Eleve.Prenom" class="form-control" id="prenom" placeholder="Prenom"/>
-    </div>
-</div>
+            <div class="form-group">
+                <label for="nom" class="col-sm-2 control-label">Nom</label>
+                <div class="col-sm-10">
+                    <input type="text" ng-model="Eleve.Nom" class="form-control" id="nom" placeholder="Nom"/>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="prenom" class="col-sm-2 control-label">Prenom</label>
+                <div class="col-sm-10">
+                    <input type="text" ng-model="Eleve.Prenom" class="form-control" id="prenom" placeholder="Prenom"/>
+                </div>
+            </div>
 
-<div class="form-group">
-    <label for="email" class="col-sm-2 control-label">Adresse Mail</label>
-    <div class="col-sm-10">
-        <input type="text" ng-model="Eleve.email" class="form-control" id="email" placeholder="email"/>
-    </div>
-</div>
+            <div class="form-group">
+                <label for="email" class="col-sm-2 control-label">Adresse Mail</label>
+                <div class="col-sm-10">
+                    <input type="text" ng-model="Eleve.email" class="form-control" id="email" placeholder="email"/>
+                </div>
+            </div>
 
-<div class="form-group">
-    <label for="username" class="col-sm-2 control-label">Username</label>
-    <div class="col-sm-10">
-        <input type="text" ng-model="Eleve.username" class="form-control" id="username" placeholder="username"/>
-    </div>
-</div>
+            <div class="form-group">
+                <label for="username" class="col-sm-2 control-label">Username</label>
+                <div class="col-sm-10">
+                    <input type="text" ng-model="Eleve.username" class="form-control" id="username" placeholder="username"/>
+                </div>
+            </div>
 
-<!-- Ajouter Menu déroulant pour associer l'élève à un ou DES cours -->
+            <!-- Ajouter Menu déroulant pour associer l'élève à un ou DES cours -->
 
-<!-- Ajouter Menu déroulant pour associer l'élève à un ou DES groupes -->
+            <!-- Ajouter Menu déroulant pour associer l'élève à un ou DES groupes -->
 
 
 
-<div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-        <input type="submit" class="btn btn-primary" value="Ajouter Elève"/>
-    </div>
-</div>
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <input type="submit" ng-click="addEleve()" class="btn btn-primary" value="Ajouter Elève"/>
+                </div>
             </div>
         </div>
     </div>
+</div>
