avancement Adel: tables

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <!-- Custom CSS -->
     <link href="/app/Admin/dist/css/sb-admin-2.css" rel="stylesheet">
+    <link href="/app/Admin/dist/css/main.css" rel="stylesheet">
+
 
     <!-- Morris Charts CSS -->
 
