--- a/app/Admin/pages/eleves/eleves.html
+++ b/app/Admin/pages/eleves/eleves.html
@@ -14,29 +14,27 @@
                 </div>
                 <!-- /.panel-heading -->
                 <div class="panel-body">
-                    <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">                        <thead>
-                        <tr class="">
-                            <th>Nom</th>
-                            <th>Prenom</th>
-                            <th class="hidden-sm hidden-xs">username</th>
-                            <th class="hidden-md hidden-sm hidden-xs">Mail</th>
-                            <th class="hidden-sm hidden-xs">Groupes</th>
-                            <th class="hidden-sm hidden-xs">Cours</th>
-                            <th>Actions</th>
-                        </tr>
+                    <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
+                        <thead>
+                            <tr class="">
+                                <th></th>
+                                <th>Nom</th>
+                                <th>Prenom</th>
+                                <th class="hidden-sm hidden-xs">username</th>
+                                <th class="hidden-md hidden-sm hidden-xs">Mail</th>
+                                <th class="hidden-sm hidden-xs">Groupes</th>
+                                <th class="hidden-sm hidden-xs">Cours</th>
+                                <th>Actions</th>
+                            </tr>
                         </thead>
                         <tbody>
 
-                        <tr class="infos" ng-repeat="eleve in ElevesList | orderBy:'Nom'" ng-class-odd="'odd'" ng-class-even="'even'">
-                            <td class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <span class="caret"></span> {{eleve.Nom}}</a>
-                                <ul class="dropdown-menu">
-                                    <li class="hidden-xl hidden-lg hidden-md"><a href="#">username: {{eleve.username}}</a></li>
-                                    <li class="hidden-xl hidden-lg"><a href="#">email: {{eleve.email}}</a></li>
-                                    <li class=""><a href="#">eleve_id: {{eleve.eleves_id}}</a></li>
-                                    <li class=""><a href="#">user_id: {{eleve.user_id}}</a></li>
-                                </ul>
+                        <tr class="infos" ng-repeat-start="eleve in ElevesList | orderBy:'Nom'" ng-class-odd="'odd'" ng-class-even="'even'">
+                            <td>
+                                <button ng-if="eleve.expanded" ng-click="eleve.expanded = false">&Hat;</button>
+                                <button ng-if="!eleve.expanded" ng-click="eleve.expanded = true">+</button>
                             </td>
+                            <td>{{eleve.Nom}}</td>
                             <td>{{eleve.Prenom}}</td>
                             <td class="hidden-sm hidden-xs">{{eleve.username}}</td>
                             <td class="hidden-md hidden-sm hidden-xs">{{eleve.email}}</td>
@@ -71,7 +69,17 @@
                                 </button>
                             </td>
                         </tr>
-
+                        <tr ng-if="eleve.expanded" ng-repeat-end="">
+                            <td></td>
+                            <td colspan="99">
+                                <ul class="">
+                                    <li class="hidden-xl hidden-lg hidden-md"><a href="#">username: {{eleve.username}}</a></li>
+                                    <li class="hidden-xl hidden-lg"><a href="#">email: {{eleve.email}}</a></li>
+                                    <li class=""><a href="#">eleve_id: {{eleve.eleves_id}}</a></li>
+                                    <li class=""><a href="#">user_id: {{eleve.user_id}}</a></li>
+                                </ul>
+                            </td>
+                        </tr>
 
 
                         </tbody>
