--- a/app/Admin/pages/eleves/eleves.html
+++ b/app/Admin/pages/eleves/eleves.html
@@ -20,7 +20,7 @@
                                 <th></th>
                                 <th>Nom</th>
                                 <th>Prenom</th>
-                                <th class="hidden-sm hidden-xs">username</th>
+                                <th class="hidden-sm hidden-xs">Pseudo</th>
                                 <th class="hidden-md hidden-sm hidden-xs">Mail</th>
                                 <th class="hidden-sm hidden-xs">Groupes</th>
                                 <th class="hidden-sm hidden-xs">Cours</th>
