--- a/app/Admin/pages/enseignants/enseignants.html
+++ b/app/Admin/pages/enseignants/enseignants.html
@@ -1,4 +1,4 @@
-<div id="page-wrapper">
+<div id="page-wrapper" ng-controller="EnseignantsController">
     <div class="row">
         <div class="col-lg-12">
             <h1 class="page-header">Tables</h1>
@@ -17,47 +17,60 @@
                     <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
                         <thead>
                         <tr>
+                            <th></th>
                             <th>Nom</th>
                             <th>Prenom</th>
-                            <th>username</th>
-                            <th>Mail</th>
-                            <th>Statut</th>
-                            <th>eleves_id</th>
-                            <th>user_id</th>
-                            <th>Cours</th>
+                            <th class="hidden-sm hidden-xs">Pseudo</th>
+                            <th class="hidden-md hidden-sm hidden-xs">Mail</th>
+                            <th class="hidden-sm hidden-xs">Cours</th>
+                            <th>Actions</th>
                         </tr>
                         </thead>
                         <tbody>
-                        <tr class="infos" ng-repeat="enseignant in EnseignantsList | orderBy:'Nom'" ng-class-odd="'odd'" ng-class-even="'even'">
+
+                        <tr class="infos" ng-repeat-start="enseignant in EnseignantsList | orderBy:'Nom'" ng-class-odd="'odd'" ng-class-even="'even'">
+                            <td>
+                                <button ng-if="enseignant.expanded" ng-click="enseignant.expanded = false">&Hat;</button>
+                                <button ng-if="!enseignant.expanded" ng-click="enseignant.expanded = true">+</button>
+                            </td>
                             <td>{{enseignant.Nom}}</td>
                             <td>{{enseignant.Prenom}}</td>
-                            <td>{{enseignant.username}}</td>
-                            <td>{{enseignant.email}}</td>
-                            <td>{{enseignant.role}}</td>
-                            <td>{{enseignant.enseignants_id}}</td>
-                            <td>{{enseignant.user_id}}</td>
-                            <td>{{enseignant.cours}}</td>
+                            <td class="hidden-sm hidden-xs">{{enseignant.username}}</td>
+                            <td class="hidden-md hidden-sm hidden-xs">{{enseignant.email}}</td>
+                            <td class="hidden-sm hidden-xs">
+                                <div class="dropdown">
+                                    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                        <span class="hidden-md">Liste des cours</span>
+                                        <span class="hidden-xl hidden-lg">Liste</span>
+                                        <span class="caret"></span>
+                                    </button>
+                                    <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu2">
+                                        <li ng-repeat="c in enseignant.cours"><a href="#">{{c}}</a></li>
+                                    </ul>
+                                </div>
+                            </td>
+                        <td>
+                            <button type="button" class="btn btn-primary btn-circle-micro"><i class="fa fa-list"></i>
+                            </button>
+                            <button type="button" class="btn btn-danger btn-circle-micro"><i class="fa fa-times"></i>
+                            </button>
+                        </td>
                         </tr>
-
-                        <tr class="gradeA">
-                            <td>Noemie</td>
-                            <td>NetFront 3.1</td>
-                            <td>Embedded devices</td>
-                            <td class="center">-</td>
-                            <td class="center">
-                                <button type="button" class="btn btn-success btn-circle"><i class="fa fa-plus"></i>
-                                </button>
-                                <button type="button" class="btn btn-primary btn-circle"><i class="fa fa-list"></i>
-                                </button>
-                                <button type="button" class="btn btn-danger btn-circle"><i class="fa fa-times"></i>
-                                </button>
+                        <tr ng-if="enseignant.expanded" ng-repeat-end="">
+                            <td></td>
+                            <td colspan="99">
+                                <ul class="">
+                                    <li class="hidden-xl hidden-lg hidden-md"><a href="#">username: {{enseignant.username}}</a></li>
+                                    <li class="hidden-xl hidden-lg"><a href="#">email: {{enseignant.email}}</a></li>
+                                    <li class=""><a href="#">eleve_id: {{enseignant.enseignants_id}}</a></li>
+                                    <li class=""><a href="#">user_id: {{enseignant.user_id}}</a></li>
+                                </ul>
                             </td>
                         </tr>
-
                         </tbody>
                     </table>
                     <!-- /.table-responsive -->
-
+                    <button class="btn btn-primary pull-right" ng-click="add()">Ajouter un enseignant</button>
                 </div>
                 <!-- /.panel-body -->
             </div>
