--- a/app/Admin/pages/enseignants/enseignants.html
+++ b/app/Admin/pages/enseignants/enseignants.html
@@ -1,4 +1,4 @@
-<div id="page-wrapper" ng-controller="EnseignantsController">
+<div id="page-wrapper">
     <div class="row">
         <div class="col-lg-12">
             <h1 class="page-header">Tables</h1>
@@ -50,7 +50,7 @@
                                 </div>
                             </td>
                         <td>
-                            <button type="button" class="btn btn-primary btn-circle-micro"><i class="fa fa-list"></i>
+                            <button type="button" class="btn btn-primary btn-circle-micro" ng-click="goToUpdate()"><i class="fa fa-list"></i>
                             </button>
                             <button type="button" class="btn btn-danger btn-circle-micro"><i class="fa fa-times"></i>
                             </button>
@@ -70,7 +70,7 @@
                         </tbody>
                     </table>
                     <!-- /.table-responsive -->
-                    <button class="btn btn-primary pull-right" ng-click="add()">Ajouter un enseignant</button>
+                    <button class="btn btn-primary pull-right" ng-click="goToAdd()">Ajouter un enseignant</button>
                 </div>
                 <!-- /.panel-body -->
             </div>
