--- a/app/Admin/pages/enseignants/enseignants_add.html
+++ b/app/Admin/pages/enseignants/enseignants_add.html
@@ -1,7 +1,7 @@
 <div id="page-wrapper">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">{{Eleve.Nom}}</h1>
+            <h1 class="page-header">Nouvel Enseignant</h1>
         </div>
         <!-- /.col-lg-12 -->
     </div>
@@ -11,39 +11,39 @@
             <div class="form-group">
                 <label for="nom" class="col-sm-2 control-label">Nom</label>
                 <div class="col-sm-10">
-                    <input type="text" ng-model="Eleve.Nom" class="form-control" id="nom" value="{{Eleve.Nom}}"/>
+                    <input type="text" ng-model="Enseignant.Nom" class="form-control" id="nom" placeholder="Nom"/>
                 </div>
             </div>
             <div class="form-group">
                 <label for="prenom" class="col-sm-2 control-label">Prenom</label>
                 <div class="col-sm-10">
-                    <input type="text" ng-model="Eleve.Prenom" class="form-control" id="prenom" value="{{Eleve.Prenom}}"/>
+                    <input type="text" ng-model="Enseignant.Prenom" class="form-control" id="prenom" placeholder="Prenom"/>
                 </div>
             </div>
 
             <div class="form-group">
                 <label for="email" class="col-sm-2 control-label">Adresse Mail</label>
                 <div class="col-sm-10">
-                    <input type="text" ng-model="Eleve.email" class="form-control" id="email" value="{{Eleve.email}}"/>
+                    <input type="text" ng-model="Enseignant.email" class="form-control" id="email" placeholder="email"/>
                 </div>
             </div>
 
             <div class="form-group">
                 <label for="username" class="col-sm-2 control-label">Pseudo</label>
                 <div class="col-sm-10">
-                    <input type="text" ng-model="Eleve.username" class="form-control" id="username" value="{{Eleve.username}}"/>
+                    <input type="text" ng-model="Enseignant.username" class="form-control" id="username" placeholder="username"/>
                 </div>
             </div>
 
-            <!-- Ajouter Menu déroulant pour associer l'élève à un ou DES cours -->
+            <!-- Ajouter Menu déroulant pour associer l'enseignant à un ou DES cours -->
 
-            <!-- Ajouter Menu déroulant pour associer l'élève à un ou DES groupes -->
+            <!-- Ajouter Menu déroulant pour associer l'enseignant à un ou DES groupes -->
 
 
 
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
-                    <input type="submit" ng-click="updateEleves()" class="btn btn-primary" value="Modifier Elève"/>
+                    <input type="submit" ng-click="addEnseignant()" class="btn btn-primary" value="Ajouter Enseignant"/>
                 </div>
             </div>
         </div>
