--- a/app/Admin/pages/admin.html
+++ b/app/Admin/pages/admin.html
@@ -250,7 +250,7 @@
                             <a ui-sref="admin.enseignants"><i class="fa fa-table fa-fw"></i> Enseignants</a>
                         </li>
                         <li>
-                            <a href="forms.html"><i class="fa fa-table fa-fw"></i> Groupes</a>
+                            <a ui-sref="admin.groupes"><i class="fa fa-table fa-fw"></i> Groupes</a>
                         </li>
                         <li>
                             <a href="forms.html"><i class="fa fa-table fa-fw"></i> Paramètres</a>
