--- a/app/Admin/pages/main/main.html
+++ b/app/Admin/pages/main/main.html
@@ -77,7 +77,7 @@
                     <div class="panel-body">
                         <div>
                             <a href="#">Ajouter un groupe</a><br>
-                            <a href="#">Voir la liste des groupes</a><br>
+                            <a ui-sref="admin.groupes">Voir la liste des groupes</a><br>
                             <a href="#">Statistiques</a><br>
                         </div>
                     </div>
