--- a/app/Admin/pages/groupe/groupes.html
+++ b/app/Admin/pages/groupe/groupes.html
@@ -1,7 +1,7 @@
 <div id="page-wrapper">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Eleves</h1>
+            <h1 class="page-header">Groupes</h1>
         </div>
         <!-- /.col-lg-12 -->
     </div>
@@ -10,43 +10,37 @@
         <div class="col-lg-12">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    Étudiants
+                    Groupes
                 </div>
                 <!-- /.panel-heading -->
                 <div class="panel-body">
                     <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
                         <thead>
-                            <tr class="">
-                                <th></th>
-                                <th>Nom</th>
-                                <th>Prenom</th>
-                                <th class="hidden-sm hidden-xs">Pseudo</th>
-                                <th class="hidden-md hidden-sm hidden-xs">Mail</th>
-                                <th class="hidden-sm hidden-xs">Groupes</th>
-                                <th class="hidden-sm hidden-xs">Cours</th>
-                                <th>Actions</th>
-                            </tr>
+                        <tr class="">
+                            <th></th>
+                            <th>Numéro </th>
+                            <th>Elèves </th>
+                            <th class="hidden-sm hidden-xs">Cours</th>
+                            <th>Actions</th>
+                        </tr>
                         </thead>
                         <tbody>
 
-                        <tr class="infos" ng-repeat-start="eleve in ElevesList | orderBy:'Nom'" ng-class-odd="'odd'" ng-class-even="'even'">
+                        <tr class="infos" ng-repeat-start="groupe in GroupeList | orderBy:'Nom'" ng-class-odd="'odd'" ng-class-even="'even'">
                             <td>
-                                <button ng-if="eleve.expanded" ng-click="eleve.expanded = false">&Hat;</button>
-                                <button ng-if="!eleve.expanded" ng-click="eleve.expanded = true">+</button>
+                                <button ng-if="groupe.expanded" ng-click="groupe.expanded = false">&Hat;</button>
+                                <button ng-if="!groupe.expanded" ng-click="groupe.expanded = true">+</button>
                             </td>
-                            <td>{{eleve.Nom}}</td>
-                            <td>{{eleve.Prenom}}</td>
-                            <td class="hidden-sm hidden-xs">{{eleve.username}}</td>
-                            <td class="hidden-md hidden-sm hidden-xs">{{eleve.email}}</td>
+                            <td>{{groupe.numero}}</td>
                             <td class="hidden-sm hidden-xs">
                                 <div class="dropdown">
                                     <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                                        <span class="hidden-md">Liste des groupes</span>
+                                        <span class="hidden-md">Liste des élèves</span>
                                         <span class="hidden-xl hidden-lg">Liste</span>
                                         <span class="caret"></span>
                                     </button>
                                     <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
-                                        <li ng-repeat="g in eleve.Groupes"><a href="#">{{g}}</a></li>
+                                        <li ng-repeat="g in groupe.eleves"><a href="#">{{g}}</a></li>
                                     </ul>
                                 </div>
                             </td>
@@ -58,25 +52,22 @@
                                         <span class="caret"></span>
                                     </button>
                                     <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu2">
-                                        <li ng-repeat="c in eleve.cours"><a href="#">{{c}}</a></li>
+                                        <li ng-repeat="c in groupe.cours"><a href="#">{{c}}</a></li>
                                     </ul>
                                 </div>
                             </td>
                             <td>
-                                <button type="button" class="btn btn-primary btn-circle-micro" ng-click="goToUpdate()"><i class="fa fa-list"></i>
+                                <button type="button" class="btn btn-primary btn-circle-micro"><i class="fa fa-list"></i>
                                 </button>
                                 <button type="button" class="btn btn-danger btn-circle-micro"><i class="fa fa-times"></i>
                                 </button>
                             </td>
                         </tr>
-                        <tr ng-if="eleve.expanded" ng-repeat-end="">
+                        <tr ng-if="groupe.expanded" ng-repeat-end="">
                             <td></td>
                             <td colspan="99">
                                 <ul class="">
-                                    <li class="hidden-xl hidden-lg hidden-md"><a href="#">username: {{eleve.username}}</a></li>
-                                    <li class="hidden-xl hidden-lg"><a href="#">email: {{eleve.email}}</a></li>
-                                    <li class=""><a href="#">eleve_id: {{eleve.eleves_id}}</a></li>
-                                    <li class=""><a href="#">user_id: {{eleve.user_id}}</a></li>
+                                    <li class=""><a href="#">groupe_id: {{groupe.groupe_id}</a></li>
                                 </ul>
                             </td>
                         </tr>
@@ -85,7 +76,7 @@
                         </tbody>
                     </table>
                     <!-- /.table-responsive -->
-                    <button class="btn btn-primary pull-right" ng-click="goToAdd()">Ajouter un étudiant</button>
+                    <button class="btn btn-primary pull-right" ng-click="add()">Nouveau groupe</button>
                 </div>
                 <!-- /.panel-body -->
             </div>
