--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 
     <script src="app/Admin/pages/eleves/eleve_add_controller.js"></script>
     <script src="app/Admin/pages/eleves/eleve_update_controller.js"></script>
+    <script src="app/Admin/pages/groupe/groupes_controller.js"></script>
 
 
 </head>
