enseignants html/update/add

--- a/app/Admin/pages/eleves/eleve_update.html
+++ b/app/Admin/pages/eleves/eleve_update.html
@@ -22,7 +22,7 @@
             </div>
 
             <div class="form-group">
-                <label for="email" class="col-sm-2 control-label">Adresse Mail</label>
+                <label for="email" class="col-sm-2 control-label">Adresse-Mail</label>
                 <div class="col-sm-10">
                     <input type="text" ng-model="Eleve.email" class="form-control" id="email" value="{{Eleve.email}}"/>
                 </div>
