--- a/app/Admin/pages/enseignants/enseignants.html
+++ b/app/Admin/pages/enseignants/enseignants.html
@@ -50,7 +50,7 @@
                                 </div>
                             </td>
                         <td>
-                            <button type="button" class="btn btn-primary btn-circle-micro" ng-click="goToUpdate()"><i class="fa fa-list"></i>
+                            <button type="button" class="btn btn-primary btn-circle-micro" ng-click="goToUpdate(enseignant.enseignants_id)"><i class="fa fa-list"></i>
                             </button>
                             <button type="button" class="btn btn-danger btn-circle-micro"><i class="fa fa-times"></i>
                             </button>
@@ -62,7 +62,7 @@
                                 <ul class="">
                                     <li class="hidden-xl hidden-lg hidden-md"><a href="#">username: {{enseignant.username}}</a></li>
                                     <li class="hidden-xl hidden-lg"><a href="#">email: {{enseignant.email}}</a></li>
-                                    <li class=""><a href="#">eleve_id: {{enseignant.enseignants_id}}</a></li>
+                                    <li class=""><a href="#">enseignant_id: {{enseignant.enseignants_id}}</a></li>
                                     <li class=""><a href="#">user_id: {{enseignant.user_id}}</a></li>
                                 </ul>
                             </td>
