--- a/app/Admin/pages/enseignants/enseignants_update.html
+++ b/app/Admin/pages/enseignants/enseignants_update.html
@@ -22,7 +22,7 @@
             </div>
 
             <div class="form-group">
-                <label for="email" class="col-sm-2 control-label">Adresse Mail</label>
+                <label for="email" class="col-sm-2 control-label">AdresseMail</label>
                 <div class="col-sm-10">
                     <input type="text" ng-model="Enseignant.email" class="form-control" id="email" value="{{Enseignant.email}}"/>
                 </div>
@@ -43,7 +43,7 @@
 
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
-                    <input type="submit" ng-click="updateEnseignants()" class="btn btn-primary" value="Modifier Enseignant"/>
+                    <input type="submit" ng-click="updateEnseignant()" class="btn btn-primary" value="Modifier Enseignant"/>
                 </div>
             </div>
         </div>
