--- a/index.html
+++ b/index.html
@@ -45,10 +45,12 @@
     <script src="app/navbar/navbar.directive.js"></script>
     <script src="app/services/eleves_service.js"></script>
     <script src="app/services/enseignants_service.js"></script>
+    <script src="app/services/httpq.js"></script>
 
     <!--------------------------------- CONTROLLERS--------------------------------------------->
     <script src="app/Admin/pages/eleves/eleves_controller.js"></script>
     <script src="app/Admin/pages/enseignants/enseignants_controller.js"></script>
+    <script src="app/Admin/pages/cours/cours_controller.js"></script>
     <script src="app/Admin/pages/groupe/groupes_controller.js"></script>
 
 
