--- a/app/Admin/pages/cours/cours.html
+++ b/app/Admin/pages/cours/cours.html
@@ -131,7 +131,7 @@
                         </ul>
                     </nav>
                     <!-- /.table-responsive -->
-                    <button class="btn btn-primary pull-right" ng-click="goToAdd()">Ajouter un cours</button>
+                    <button class="btn btn-primary pull-right" ng-click="goToAdd()">Nouveau cours</button>
                 </div>
                 <!-- /.panel-body -->
             </div>
