--- a/app/Admin/pages/enseignants/enseignants.html
+++ b/app/Admin/pages/enseignants/enseignants.html
@@ -119,7 +119,7 @@
                         </tbody>
                     </table>
                     <!-- /.table-responsive -->
-                    <button class="btn btn-primary pull-right" ng-click="goToAdd()">Ajouter un enseignant</button>
+                    <button class="btn btn-primary pull-right" ng-click="goToAdd()">Nouvel enseignant</button>
                 </div>
                 <!-- /.panel-body -->
             </div>
