--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
     <!--------------------------------- CONTROLLERS--------------------------------------------->
     <script src="app/Admin/pages/eleves/eleves_controller.js"></script>
+    <script src="app/Admin/pages/eleves/eleves_update_controller.js"></script>
     <script src="app/Admin/pages/enseignants/enseignants_controller.js"></script>
     <script src="app/Admin/pages/groupe/groupes_controller.js"></script>
 
