--- a/app/Admin/pages/eleves/eleve_update.html
+++ b/app/Admin/pages/eleves/eleve_update.html
@@ -11,27 +11,27 @@
             <div class="form-group">
                 <label for="nom" class="col-sm-2 control-label">Nom</label>
                 <div class="col-sm-10">
-                    <input type="text" ng-model="Eleve.Nom" class="form-control" id="nom" value="{{Eleve.Nom}}"/>
+                    <input type="text" ng-model="UdEleve.Nom" class="form-control" id="nom" value="{{Eleve.Nom}}"/>
                 </div>
             </div>
             <div class="form-group">
                 <label for="prenom" class="col-sm-2 control-label">Prenom</label>
                 <div class="col-sm-10">
-                    <input type="text" ng-model="Eleve.Prenom" class="form-control" id="prenom" value="{{Eleve.Prenom}}"/>
+                    <input type="text" ng-model="UdEleve.Prenom" class="form-control" id="prenom" value="{{Eleve.Prenom}}"/>
                 </div>
             </div>
 
             <div class="form-group">
                 <label for="email" class="col-sm-2 control-label">Adresse-Mail</label>
                 <div class="col-sm-10">
-                    <input type="text" ng-model="Eleve.email" class="form-control" id="email" value="{{Eleve.email}}"/>
+                    <input type="text" ng-model="UdEleve.email" class="form-control" id="email" value="{{Eleve.email}}"/>
                 </div>
             </div>
 
             <div class="form-group">
                 <label for="username" class="col-sm-2 control-label">Pseudo</label>
                 <div class="col-sm-10">
-                    <input type="text" ng-model="Eleve.username" class="form-control" id="username" value="{{Eleve.username}}"/>
+                    <input type="text" ng-model="UdEleve.username" class="form-control" id="username" value="{{Eleve.username}}"/>
                 </div>
             </div>
 
